--- a/index.html
+++ b/index.html
@@ -1,9 +1,137 @@
-<html xmlns="http://www.w3.org/1999/xhtml" >
-<head>
-    <title>My Website Home Page</title>
-</head>
-<body>
-  <h1>Welcome to my website</h1>
-  <p>Now hosted on Amazon S3!</p>
-</body>
+!DOCTYPE html>
+<html>
+    <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="cv.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8n bTov4+1p" crossorigin="anonymous"></script>
+    <title>CV</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Atiqah</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Works</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+                <div class="personal-info-section">
+                    <div class="personal-info">
+                        <h2 style="font-weight: bold;">Nur Atiqah Hazirah binti Hamidan</h2>
+                        <div class="contact-info">
+                            <a href="mailto:at.qahhazirah@gmail.com" target="_blank">at.qahhazirah@gmail.com |</a>
+                            <p>+60133431588 | </p>
+                            <a href="linkedin.com/in/atiqahhamidan" target="_blank"> linkedin.com/in/atiqahhamidan/ |</a>
+                            <p>Kuala Lumpur</p>
+                        </div>
+                        <p class="job-title">CAREER OBJECTIVE</p>
+                        <p class="description">
+                        Transitioning into UX design from a background in Quantity Surveying, with growing expertise in UI/UX principles. Currently building
+                        skills in Figma, HTML, CSS, and JavaScript to create user-friendly web and mobile applications. Working on a personal project to
+                        deepen UX knowledge and prepare for real-world application. Seeking practical experience to support a long-term goal of launching a
+                        tech startup.
+                        </p>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-6 mx-auto">
+            <div class="resume">
+                <div>
+                    <h4 class="experience">Professional Experience</h4>
+                    <h4>Executive (Contracts), Lion Group Property | Jun 2023 - Jun 2025</h4>
+                    <ul>
+                        <li>Remeasured quantities of main building works using Autodesk TrueView and coordinated with consultant and contractor,
+                        achieving RM300,000 in omission contributing to project cost savings and budget efficiency</li>
+                        <li>Evaluated comparison quotations from shortlisted tenderers with competitive pricing, ensuring value for money and
+                        contributing to cost-effective contractor selection and overall project budget optimization.</li>
+                        <li>Prepared interim, final payment certificate and final account for Contractors based on the work done by conducting site
+                        valuation.</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="education">Education</h4>
+                    <h4>Foundation Certificate in UX Design, K-Youth Development Program, TalentLabs | Jun 2025 - Present</h4>
+                    <ul>
+                        <li>Completed Modules: Web Programming Basics, Fundamentals of HTML/CSS, Software Engineering Essentials, Data
+                        Analytics in a Nutshell, UX Design Fundamentals.</li>
+                    </ul>
+                    <h4>Bachelor of Quantity Surveying, Universiti Malaya, Kuala Lumpur | Sept 2019 - Dec 2023</h2>
+                    <ul>
+                        <li>
+                            Head of Department of Creative and Publicity for Alam Bina Society, Graphic Designer of The Planet Prodigy, Manager for
+                            Track and Field, Assistant Captain for Volleyball.
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="projects">Projects</h4>
+                    <h4>Personal Project: KTMB KiTS Mobile Application Redesign | 2025</h4>
+                    <ul>
+                        <li>
+                        Redesigned the KTMB KiTS mobile app using Figma, drawing from personal experience to address usability issues such as
+                        confusing concession flows, inefficient travel booking processes, and intrusive pop-up notifications — resulting in a userfriendly interface.  
+                        </li>
+                        <li>
+                        Highlighted pain points and proposed actionable design solutions, improving clarity in travel booking, concession eligibility,
+                        and in-app guidance.
+                        </li>
+                    </ul>
+                    <h4>Personal Project: Cooking Recipe Mobile Application | 2024 – 2025</h4>
+                    <ul>
+                        <li>
+                            Designed and developed a cooking recipe app using Figma, allowing users to browse, search, and save recipes in a span of
+                            2 months.
+                        </li>
+                        <li>
+                            Created interactive low-fidelity and high-fidelity wireframes and prototypes in Figma, focusing on intuitive navigation and
+                            personalized user experience based on recipe preferences.
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="cert">Certification</h4>
+                    <h4>Scrimba Learn HTML and CSS | May 2025</h4>
+                    <ul>
+                        <li>Built a simple website, digital business card, space exploration site, and birthday GIFt site.</li>
+                    </ul>
+                    <h4>Scrimba Intro to UI Design Fundamentals | May 2025</h4>
+                    <ul>
+                        <li>Gained knowledge in UI design fundamentals such as white space, alignment, contrast, typography, colour, etc.</li>
+                    </ul>
+                    <h4>Google Professional Certificate for Create High-Fidelity Designs and Prototypes in Figma | June 2024</h4>
+                    <ul>
+                        <li>Learned how to create mockups, apply visual design principles to mockups, explore design systems, create high-fidelity
+                        prototypes, test and iterate on designs with a grade of 88.54%.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </body>
 </html>
